remove unused caller class arguemnt, some test fixes